# local-evidence-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_server.cmd  run_server.sh
.github/workflows/: ci.yml
examples/: policy.example.json
examples/vault/: lessons.md
examples/vault/notes/: engineering-log.md  retrieval-design.md
scripts/: generate_readme_assets.py
src/local_evidence_mcp/: __init__.py  server.py
tests/: test_server.py
