[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-evidence-mcp"
version = "1.0.0"
description = "A policy-constrained, local-first MCP server for evidence retrieval and append-safe memory."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["mcp", "rag", "local-first", "retrieval", "security"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
local-evidence-mcp = "local_evidence_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

